1.4.0
  - Groovy Console extension:
    - added filterByProperty()

2018-08-24 1.3.0
  - Execute scripts in alphabetical order
  - Stop execution after first failed script
  - API changes

2018-08-07 1.2.0
  - Updated API
  - AEM 6.4 fix
  - GUI fixes

2018-07-25 1.1.0
  - Design improvements
  - AEM 6.4 support
  - Moved filter classes to API
  - Bundle: update Groovy Console to version 12.0.0


2018-07-19 1.0.0
  - Fixes for install hook
  - Bundle package that also installs Groovy Console
  - Performance improvements


2018-07-19 0.9
  - initial release
  