@@ -164,11 +164,13 @@ These methods can be used to filter the nodes that were collected above. Multipl
 
 Filters the resources by property values.
 
+* filterByHasProperty: matches all nodes that have the given property. The value of the property is not relevant.
 * filterByProperty: matches all nodes that have the given attribute value. Filter does not match if attribute is not present.
 * filterByProperties: use this to filter by a list of property values (e.g. sling:resourceType). All properties in the map are required to to match. Filter does not match if attribute does not exist.
 * filterByMultiValuePropContains: checks if all condition values are contained in the defined attribute. Filter does not match if attribute does not exist.
 
 ```java
+filterByHasProperty(String name)
 filterByProperty(String name, Object value)
 filterByProperties(Map<String, String> properties)
 filterByMultiValuePropContains(String name,  Object[] conditionValues)
@@ -182,6 +184,7 @@ conditionMap["sling:resourceType"] = "weretail/components/structure/page"
 
 println aecu.contentUpgradeBuilder()
         .forChildResourcesOf("/content/we-retail/ca/en")
+        .filterByHasProperty("myProperty")
         .filterByProperty("sling:resourceType", "wcm/foundation/components/responsivegrid")
         .filterByProperties(conditionMap)
         .filterByMultiValuePropContains("myAttribute", ["value"] as String[])
