@@ -1,6 +1,7 @@
 1.4.0
   - Groovy Console extension:
     - added filterByProperty()
+    - added filterByHasProperty()
 
 2018-08-24 1.3.0
   - Execute scripts in alphabetical order
